Set operators to catalan in documentation example.

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -550,17 +550,19 @@
 %    \verb.\catalanoperators..
 %    \begin{table}[htb]
 %     \centering
-%     \begin{tabular}{ll}
-%      \verb.\mod. & $\mod$\\
-%      \verb.\pmod. & $\pmod$\\
-%      \verb.\bmod. & $\bmod$\\
-%      \verb.\lim. & $\lim$\\
-%      \verb.\liminf. & $\liminf$\\
-%      \verb.\limsup. & $\limsup$\\
-%      \verb.\max. & $\max$\\
-%      \verb.\min. & $\min$\\
-%      \verb.\inf. & $\inf$
-%     \end{tabular}
+%     \begin{otherlanguage}{catalan}
+%       \begin{tabular}{ll}
+%        \verb.\mod. & $\mod$\\
+%        \verb.\pmod. & $\pmod$\\
+%        \verb.\bmod. & $\bmod$\\
+%        \verb.\lim. & $\lim$\\
+%        \verb.\liminf. & $\liminf$\\
+%        \verb.\limsup. & $\limsup$\\
+%        \verb.\max. & $\max$\\
+%        \verb.\min. & $\min$\\
+%        \verb.\inf. & $\inf$
+%       \end{tabular}
+%     \end{otherlanguage}
 %     \caption{Math operators redefined by \babelcat{}}
 %     \label{tab:catalan-operators}
 %    \end{table}
