--- a/catalan.dtx
+++ b/catalan.dtx
@@ -990,7 +990,7 @@
 %    unavailable, we use a plain \TeX definition.
 %
 %    The code used in the plain \TeX{} definition is a combination of the one
-%    proposed by Feruglio and Fuster\footnote{G.~Valiente and R.~Fuster,
+%    proposed by Valiente and Fuster\footnote{G.~Valiente and R.~Fuster,
 %    Typesetting Catalan Texts with \TeX, \emph{TUGboat} \textbf{14}(3), 1993.}
 %    and the proposal\footnote{G. Valiente, Modern Catalan Typographical
 %    Conventions, \emph{TUGboat} \textbf{16}(3), 1995.} from Valiente presented
