Correct apostrophation of «ela geminada»

--- a/catalan.dtx
+++ b/catalan.dtx
@@ -209,7 +209,7 @@
 %       i bene"it amb caf`e del flasc'o\end{verbatim}
 %
 %    La taula \ref{tbl:acceleradors} llista les combinacions que cal emprar per accedir a aquests caràcters
-%     accentuats, així com també als caràcters de l'ela geminada, guillemets i altres símbols\footnote{Pareu
+%     accentuats, així com també als caràcters de la ela geminada, guillemets i altres símbols\footnote{Pareu
 %     esment en el fet que, quan l'apòstrof és actiu, cal tenir cura d'introduir els mots apostrofats
 %     de manera que no es puguin confondre amb accents. Així, cal escriure \verb|l'\{\}estri| en lloc
 %     de \verb|l'estri|.}.
@@ -229,7 +229,7 @@
 %             &  &  \\
 %           ï, ü, ç, Ï, Ü, Ç  &  |"i|, |"u|, |"c|, |"I|, |"U|, |"C| & Dièresi i ce trencada.\\
 %         \midrule
-%           \lgem  &  |"l|, |\lgem|, |\l.l| & \multirow{2}{=}{Ela geminada. Aquest caràcter es discuteix
+%           \lgem  &  |"l|, |\lgem|, |\l.l| & \multirow{2}{=}{Ela geminada. Aquest dígraf es discuteix
 %             en profunditat a la secció \ref{sec:elageminada}.}\\
 %           \Lgem  &  |"L|, |\Lgem|, |\L.L| & \\
 %         \midrule
@@ -252,7 +252,7 @@
 %  \subsection{Caràcters accentuats i símbols -- mètode modern}\label{sec:moderntyping}
 %    Avui en dia els principals sistemes operatius usen internament l'estàndard \textit{Unicode} i és possible 
 %    d'introduir directament pel teclat els caràcters de la taula \ref{tbl:acceleradors}, amb l'excepció probable 
-%    de l'ela geminada, que no té un codi específic associat (vegeu la secció \ref{sec:elageminada}). Això permet
+%    de la ela geminada, que no té un codi específic associat (vegeu la secció \ref{sec:elageminada}). Això permet
 %    d'incorporar aquests caràcters directament als fitxers d'entrada del \TeX, però caldrà indicar-li 
 %    quina codificació s'ha emprat en desar-los.
 %
@@ -291,10 +291,9 @@
 %      \end{tabular}
 %    \end{table}
 %
-%  \subsection{El caràcter "<ela geminada">}\label{sec:elageminada}
-%  TODO: Manca escriure aquesta secció.
-%  
-%  
+%  \subsection{La "<ela geminada">}\label{sec:elageminada}
+%  Des de la seva introducció, el 1913, per l'IEC a proposta d'Antoni M. Alcover 
+%     
 %  \section{Traduccions}
 %
 %  \subsection{Noms de capçaleres}
